--- a/Project/ZPGProject/ZPGProject/ZPGProject.vcxproj.filters
+++ b/Project/ZPGProject/ZPGProject/ZPGProject.vcxproj.filters
@@ -13,10 +13,65 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="Zdrojové soubory\ShaderProgram">
+      <UniqueIdentifier>{ad3aee40-f895-405b-bdc6-be10f1504425}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Hlavičkové soubory\ShaderProgram">
+      <UniqueIdentifier>{a0abb992-ec52-4e0c-90d1-2ae9a5c341a9}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Hlavičkové soubory\Models">
+      <UniqueIdentifier>{6c3ea153-7424-4da1-bd34-7ada84802acf}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
       <Filter>Zdrojové soubory</Filter>
     </ClCompile>
+    <ClCompile Include="Application.cpp">
+      <Filter>Zdrojové soubory</Filter>
+    </ClCompile>
+    <ClCompile Include="Model.cpp">
+      <Filter>Zdrojové soubory</Filter>
+    </ClCompile>
+    <ClCompile Include="ShaderProgram.cpp">
+      <Filter>Zdrojové soubory\ShaderProgram</Filter>
+    </ClCompile>
+    <ClCompile Include="Shader.cpp">
+      <Filter>Zdrojové soubory\ShaderProgram</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="ShaderProgram.h">
+      <Filter>Hlavičkové soubory\ShaderProgram</Filter>
+    </ClInclude>
+    <ClInclude Include="Shader.h">
+      <Filter>Hlavičkové soubory\ShaderProgram</Filter>
+    </ClInclude>
+    <ClInclude Include="Application.h">
+      <Filter>Hlavičkové soubory</Filter>
+    </ClInclude>
+    <ClInclude Include="Model.h">
+      <Filter>Hlavičkové soubory</Filter>
+    </ClInclude>
+    <ClInclude Include="Cube.h">
+      <Filter>Hlavičkové soubory\Models</Filter>
+    </ClInclude>
+    <ClInclude Include="Triangle.h">
+      <Filter>Hlavičkové soubory\Models</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="vertex_shader.glsl">
+      <Filter>Soubory zdrojů</Filter>
+    </None>
+    <None Include="fragment_shader.glsl">
+      <Filter>Soubory zdrojů</Filter>
+    </None>
+    <None Include="vertex_shader_positional_color.glsl">
+      <Filter>Soubory zdrojů</Filter>
+    </None>
+    <None Include="fragment_shader_positional_color.glsl">
+      <Filter>Soubory zdrojů</Filter>
+    </None>
   </ItemGroup>
 </Project>
