First project check

--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,6 @@ Thumbs.db
 .vs/
 Project/ZPGProject/ZPGProject/Debug
 Project/ZPGProject/Debug
+Project/ZPGProject/x64
+Project/ZPGProject/ZPGProject/x64/Debug
+Project/ZPGProject/ZPGProject/MAK0065
