--- a/Project/ZPGProject/ZPGProject/ZPGProject.vcxproj
+++ b/Project/ZPGProject/ZPGProject/ZPGProject.vcxproj
@@ -141,6 +141,7 @@
     <ClCompile Include="Light\LightManager.cpp" />
     <ClCompile Include="Light\Light.cpp" />
     <ClCompile Include="Model\GameObjectBuilder.h" />
+    <ClCompile Include="Model\ModelManager.cpp" />
     <ClCompile Include="Scene\DefaultScene\HouseObjectGroup.cpp" />
     <ClCompile Include="Model\GameObject.cpp" />
     <ClCompile Include="main.cpp" />
@@ -169,6 +170,7 @@
     <ClInclude Include="Models\bushes.h" />
     <ClInclude Include="Models\gift.h" />
     <ClInclude Include="Models\tree.h" />
+    <ClInclude Include="Model\ModelManager.h" />
     <ClInclude Include="Scene\DefaultScene\HouseObjectGroup.h" />
     <ClInclude Include="Model\GameObject.h" />
     <ClInclude Include="GlobalInclude.h" />
